# ai-researcher-assistant

./: .env  .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE_OVERVIEW.md  DATA_INGESTION_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DOCUMENTATION_INDEX.md  MANUAL_TESTING_GUIDE.md  PHASE3_COMPLETION.md  PHASE3_SUMMARY.txt  PHASE4_COMPLETION.md  PHASE4_PLAN.md  PHASE4_SESSION_COMPLETE.md  PHASE4_SESSION_SUMMARY.txt  PHASE5_COMPLETION.md  PHASE5_SESSION_SUMMARY.md  PHASE6_COMPLETION.md  PHASE6_SESSION_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_OVERVIEW.md  QUICK_VISUAL.md  README.md  SETUP.md  SPECIFICATION_VERIFICATION_REPORT.md  START_HERE.md  SUMMARY.md  pyproject.toml  requirements.txt  streamlit_config.toml
.github/: copilot-instructions.md
docs/: test_data_ingestion.md
specs/001-context-aware-research/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-context-aware-research/checklists/: requirements.md
specs/001-context-aware-research/contracts/: agents.md  tools.md
src/: __init__.py  agents.py  app.py  config.py  logging_config.py  tasks.py
src/data_ingestion/: __init__.py  embedder.py  milvus_loader.py  parser.py  pipeline.py
src/models/: __init__.py  context.py  memory.py  query.py  response.py
src/pages/: document_processing.py  research.py
src/services/: __init__.py  evaluator.py  orchestrator.py  search_service.py  synthesizer.py
src/tools/: __init__.py  arxiv_tool.py  base.py  firecrawl_tool.py  memory_tool.py  rag_tool.py
src/ui/: __init__.py  components.py  styles.py
src/utils/: __init__.py  formatters.py  validators.py
tests/: __init__.py  test_phase3_manual.md  test_phase3_units.py  test_phase4_integration.py  test_phase4_manual.md  test_phase5_integration.py  test_phase6_integration.py  test_phase7_integration.py
